--- a/foto/index.html
+++ b/foto/index.html
@@ -44,8 +44,8 @@
 			<div class="p-item grid-sizer"><a class="venobox" href="images/porfolio-4-300x500.jpg">
 				<img src="images/porfolio-4-300x500.jpg" alt=""/></a></div>
 		
-			<div class="p-item grid-sizer"><a class="venobox" href="images/porfolio-5-300x500.jpg">
-				<img src="images/porfolio-5-300x500.jpg" alt=""/></a></div>
+			<div class="p-item grid-sizer"><a class="venobox" href="images/kwan.jpg">
+				<img src="images/kwan.jpg" alt=""/></a></div>
 		
 			<div class="p-item grid-sizer"><a class="venobox" href="images/porfolio-6-700x500.jpg">
 				<img src="images/porfolio-6-700x500.jpg" alt=""/></a></div>
